--- a/src/features/entities/studios/styles/_studio-portfolio-view.scss
+++ b/src/features/entities/studios/styles/_studio-portfolio-view.scss
@@ -21,6 +21,10 @@
 
   &__title-section {
     flex: 1;
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   &__title {
